k8s-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-books
  labels:
    app: sample-books
    tier: service
spec:
  # use NodePort here to be able to access a port on each node
  type: NodePort
  ports:
  - port: 8080
  selector:
    app: sample-books
